--- a/src/x2.tex
+++ b/src/x2.tex
@@ -325,6 +325,13 @@
 \newcommand{\Defit}[1]{(\index{#1|see {\prev@index@word@nu}}\emph{#1})}
 \newcommand{\addindex}[1]{\index{#1|see {\prev@index@word@nu}}}
 \makeatother
+
+  \newcommand{\indexforcriterionofregularity}{%
+    \index{正則性の判定法}%
+    \index{正則性!---の判定法|see {正則性の判定法}}%
+    \index{正則!---性の判定法|see {正則性の判定法}}%
+    \index{判定!正則性の---法|see {正則性の判定法}}%
+  }
 % misc (command)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
